Initial public release was version 0.1.0