@@ -24,12 +24,14 @@
  * SUCH DAMAGE.
  */
 
-This is flipit version 0.1.0, a program for controlling X10 devices via a cm17a
+This is flipit version 0.1.1, a program for controlling X10 devices via a cm17a
 "Firecracker" from X10 Ltd.
 
 This is an ALPHA version of flipit.  Features are missing and/or incomplete.
+Still, I greatly appreciate reports of either problems or successes with this
+package!
 
-The author's e-mail address is matt@lickey.com.
+I can be reached at Matt Armstrong <matt@lickey.com>.
 
 Please see the COPYING file for the license information.
 Please see the INSTALL file for installation instructions.
