@@ -93,7 +93,7 @@
 .nr % 0
 .rr F
 .\}
-.TH FLIPIT 1 "flipit version 0.1.0" "29/Jul/1999" "flipit 0.1.0"
+.TH FLIPIT 1 "flipit version 0.1.1" "29/Jul/1999" "flipit 0.1.1"
 .UC
 .if n .hy 0
 .if n .na
@@ -192,7 +192,7 @@ flipit \- control the X10 Firecracker (CM17A)
 .SH "SYNOPSIS"
 flipit\ [\fBflip\fR\ \fB(a-p)(1-16)\fR\ \fB(on|off)\fR]\ [repeat...]
 .SH "DESCRIPTION"
-This document describes flipit version 0.1.0.
+This document describes flipit version 0.1.1.
 .PP
 Flipit allows you to control X10 devices with your Unix computer by
 means of a Firecracker (model number CM17A) plugged into a serial
