@@ -5,4 +5,9 @@
 # The following will set the device flipit will use to control the cm17a (X10
 # Firecracker).
 #
+# Common serial device names:
+#
+#	Linux:		/dev/ttyS0, /dev/ttyS1, etc.
+#	OpenBSD:	/dev/tty00, /dev/tty01, etc.
+#
 tty	/dev/ttyS0
