@@ -43,7 +43,7 @@ flipit&nbsp;[<STRONG>flip</STRONG>&nbsp;<STRONG>(a-p)(1-16)</STRONG>&nbsp;<STRON
 <HR>
 <H1><A NAME="DESCRIPTION">DESCRIPTION</A></H1>
 <P>
-This document describes flipit version 0.1.0.
+This document describes flipit version 0.1.1.
 
 <P>
 Flipit allows you to control X10 devices with your Unix computer by means
