@@ -1,1 +1,4 @@
-Initial public release was version 0.1.0
+User visible changes for version 0.1.1:
+	Port to OpenBSD.
+
+Initial public release was version 0.1.0.
